fixed problem with payment type overlapping email, rearranged status info

--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -220,12 +220,8 @@ $cloobster-font-color: #1E4776;
 
 	margin: 5px;
 
-	div {
-		padding: 3px;
-	}
-
 	div.key {
-		width: 120px;
+		margin-right: 10px;
 		float: left;
 		font-weight: bold;
 	}
